@@ -1,16 +1,22 @@
-/* Copyright 2000-2004 The Apache Software Foundation
+/* apache_request.c -- Apache multipart form data handling */
 
-   Licensed under the Apache License, Version 2.0 (the "License");
-   you may not use this file except in compliance with the License.
-   You may obtain a copy of the License at
+/*
+    Licensed to the Apache Software Foundation (ASF) under one
+    or more contributor license agreements.  See the NOTICE file
+    distributed with this work for additional information
+    regarding copyright ownership.  The ASF licenses this file
+    to you under the Apache License, Version 2.0 (the
+    "License"); you may not use this file except in compliance
+    with the License.  You may obtain a copy of the License at
 
-   	http://www.apache.org/licenses/LICENSE-2.0
+      http://www.apache.org/licenses/LICENSE-2.0
 
-   Unless required by applicable law or agreed to in writing, software
-   distributed under the License is distributed on an "AS IS" BASIS,
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   See the License for the specific language governing permissions and
-   limitations under the License.
+    Unless required by applicable law or agreed to in writing,
+    software distributed under the License is distributed on an
+    "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
+    KIND, either express or implied.  See the License for the
+    specific language governing permissions and limitations
+    under the License.
 */
 
 #include <errno.h>
@@ -564,9 +570,8 @@ ApacheRequest_parse_multipart(ApacheRequest *req,const char* ct)
 #ifdef DEBUG
             ap_log_rerror(REQ_ERROR,"Silently dropping remaining '%ld' bytes", r->remaining);
 #endif
-	    do { } while ( ap_get_client_block(r, buff, sizeof(buff)) > 0 );
-            	
-	    return OK;
+	        do { } while ( ap_get_client_block(r, buff, sizeof(buff)) > 0 );	
+	        return OK;
         }
 
         if ((cd = apr_table_get(header, "Content-Disposition"))) {
