@@ -1,3 +1,11 @@
+2019-12-30 Massimo Manghi <mxmanghi@apache.org>
+    * src/mod_rivet_ng/rivetCore.c: fixed bug in 'upload filename' that
+    caused segfaults instead of Tcl errors when called without arguments
+    * src/request/: Adding latest Copyright statements to files in this
+    directory
+    * tests/upload.rvt,upload.test: revised upload tests (need expansion
+    to test multiple uploads)
+
 2019-12-06 Massimo Manghi <mxmanghi@apache.org>
     * src/mod_rivet_ng/rivetCore.c: expanded error info data in Rivet_Upload
 
